# stochastic-reserving-framework

./: 404.html  README.md  index.html  mkdocs.yml  setup.cfg  sitemap.xml
.github/workflows/: docs-build.yml  python-package.yml
docs/: index.md  mkdocs.yml  usage.md
search/: search_index.json
src/stochastic_reserving_framework/: __init__.py  aggregation.py
tests/: test_smoke.py
usage/: index.html
