[metadata]
name = stochastic-reserving-framework
version = 0.0.0
description = Tooling for Actuarial Reserving needs
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
author =
author_email =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    scipy
extras_require =
    test =
        pytest
    docs =
        mkdocs
        mkdocs-material
include_package_data = True

[options.packages.find]
where = src

[tool:pytest]
addopts = -q
